--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DCOTYPE html>
 <html>
-<head>Jonathan Gratton</head>
+<title>Jonathan Gratton</title>
+<head></head>
 <body>
 	<h1>Hello World</h1>
 	<p>I'm hosted with GitHub Pages.</p>
