--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Jonathan Gratton</title>
 <head></head>
 <body>
-	<h1>Hello World</h1>
-	<p>I'm hosted with GitHub Pages.</p>
+	<h1>Jonathan Gratton</h1>
+	<p>Welcome. This page will be completed shortly.</p>
 </body>
 </html>
