--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html>
-<title>Jonathan Gratton</title>
-<head></head>
+<head>
+	<title>Jonathan Gratton</title>
+</head>
+
+<link rel="stylesheet" type="text/css" href="style.css">
+
 <body>
-	<h1>Jonathan Gratton</h1>
-	<p>Welcome. This page will be completed shortly.</p>
+	<h1 class="main-header writing">Jonathan Gratton</h1>
+	<p class="writing">
+		Welcome to my webpage.<br>
+		Over the next coming weeks, I plan on creating and editing this webpage<br>
+		to reflect my personality and skills as accurately as possible. Please<br>
+		have patience and check back frequently for updates.
+	</p>
+	<h2 class="sub-header writing">About Me</h2>
+	<p class="writing">
+		I am a first year Electrical Engineering and Computing Technology student at the University of Ottawa<br>
+		with large aspirations in the world of science and technology.<br>
+		<br>
+		My ambition is to bridge the gap between science and engineering by creating and innovating new<br>
+		technologies that take advantage of modern science in order to benefit today's ever evolving world.
+	</p>
+
+<h2 class="sub-header">To be continued...</h2>
+
 </body>
 </html>
