--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 
 <body>
-	<h1 class="main-header writing">Jonathan Gratton</h1>
+	<h1 class="main-header">Jonathan Gratton</h1>
 	<p class="writing">
 		Welcome to my webpage.<br>
+		<br>
 		Over the next coming weeks, I plan on creating and editing this webpage<br>
 		to reflect my personality and skills as accurately as possible. Please<br>
 		have patience and check back frequently for updates.
 	</p>
-	<h2 class="sub-header writing">About Me</h2>
+	<h2 class="sub-header">About Me</h2>
 	<p class="writing">
 		I am a first year Electrical Engineering and Computing Technology student at the University of Ottawa<br>
 		with large aspirations in the world of science and technology.<br>
