--- a/index.html
+++ b/index.html
@@ -7,24 +7,32 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 
 <body>
-	<h1 class="main-header">Jonathan Gratton</h1>
-	<p class="writing">
-		Welcome to my webpage.<br>
-		<br>
-		Over the next coming weeks, I plan on creating and editing this webpage<br>
-		to reflect my personality and skills as accurately as possible. Please<br>
-		have patience and check back frequently for updates.
-	</p>
-	<h2 class="sub-header">About Me</h2>
-	<p class="writing">
-		I am a first year Electrical Engineering and Computing Technology student at the University of Ottawa<br>
-		with large aspirations in the world of science and technology.<br>
-		<br>
-		My ambition is to bridge the gap between science and engineering by creating and innovating new<br>
-		technologies that take advantage of modern science in order to benefit today's ever evolving world.
-	</p>
+	<div class="container">
+		<div class="main-header">Jonathan Gratton</div>
+			<p>
+			Welcome to my webpage.<br>
+			<br>
+			Over the next coming weeks, I plan on adding and editing this webpage to reflect
+			my personality and skills as accurately as possible. Please have patience and check
+			back frequently for updates.
+			</p>
+	</div>
 
-<h2 class="sub-header">To be continued...</h2>
+	<div class="container">
+		<div class="sub-header">About Me</div>
+			<p>
+			I am a second year Electrical Engineering and Computing Technology student at the University of Ottawa
+			with grand aspirations in the world of science and technology.<br>
+			<br>
+			My ambition is to bridge the gap between science and engineering by creating and innovating new
+			technologies that take advantage of modern science in order to benefit today's ever evolving world.
+			</p>
+	</div>
+	<div class="container">
+		<h2 class="to-be-continued">To be continued...</h2>
+			<p>
 
+			</p>
+	</div>
 </body>
 </html>
