--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
 	<div class="container">
 		<div class="sub-header">About Me</div>
 			<p>
-			I am a second year Electrical Engineering and Computing Technology student at the University of Ottawa
-			with grand aspirations in the world of science and technology.<br>
+			I am a third year Computer Science student at the University of Ottawa with grand aspirations in the world of science and technology.<br>
 			<br>
-			My ambition is to bridge the gap between science and engineering by creating and innovating new
-			technologies that take advantage of modern science in order to benefit today's ever evolving world.
+			My ambition is to bridge the gap between science and engineering by creating and innovating new technologies that take advantage of modern science in order to benefit today's ever evolving world.
 			</p>
 	</div>
 	<div class="container">
