Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,36 +1,50 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-	<title>Jonathan Gratton</title>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Jonathan Gratton by CodedFox</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-<link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+  <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/CodedFox">View On GitHub</a></li>
+        </nav>
+      </div><!-- end header -->
 
-<body>
-	<div class="container">
-		<div class="main-header">Jonathan Gratton</div>
-			<p>
-			Welcome to my webpage.<br>
-			<br>
-			Over the next coming weeks, I plan on adding and editing this webpage to reflect
-			my personality and skills as accurately as possible. Please have patience and check
-			back frequently for updates.
-			</p>
-	</div>
+    <div class="wrapper">
 
-	<div class="container">
-		<div class="sub-header">About Me</div>
-			<p>
-			I am a third year Computer Science student at the University of Ottawa with grand aspirations in the world of science and technology.<br>
-			<br>
-			My ambition is to bridge the gap between science and engineering by creating and innovating new technologies that take advantage of modern science in order to benefit today's ever evolving world.
-			</p>
-	</div>
-	<div class="container">
-		<h2 class="to-be-continued">To be continued...</h2>
-			<p>
+      <section>
+        <div id="title">
+          <h1>Jonathan Gratton</h1>
+          <p>jonathangratton.me</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/CodedFox">CodedFox</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
 
-			</p>
-	</div>
-</body>
+        <h3>
+<a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About Me</h3>
+
+<p>I am a third year Computer Science student at the University of Ottawa with grand aspirations in the world of science and technology.</p>
+
+<p>My ambition is to bridge the gap between science and engineering by creating and innovating new technologies that take advantage of modern science in order to benefit today's ever evolving world.</p>
+      </section>
+
+    </div>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    
+  </body>
 </html>
